[package]
name = "chain_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.3.1", optional = true }
mongodb-gridfs = { version = "0.2.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.13", optional = true }
serde_json = { version = "1.0.87", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = ["mongodb-gridfs", "mongodb", "serde", "serde_json", "serde_yaml"]