[package]
name = "chain_ext"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "^1.0.0", optional = true }
mongodb = { version = "^2.0.0", optional = true }
mongodb-gridfs = { version = "^0.2.2", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_yaml = { version = "^0.7.0", optional = true }
serde_json = { version = "^1.0.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = ["mongodb-gridfs", "mongodb", "serde", "serde_json", "serde_yaml"]